[tool.poetry]
name = "InVisible"
version = "0.1.0"
description= "InVisible"
authors = ["InVisible"]

[tool.poetry.dependencies]
python = "~3.10"
Django = "^3.2"
django-appconf = "^1.0"
django-filter = "^2.2"
djangorestframework = "^3.11"
django-extensions = "^2.2"
django-rest-framework-roles = "^0.6.0"
django-reverse-admin = "^2.8"
drf-writable-nested = "^0.6.0"
django-common-helpers = "^0.9.2"
django-cors-headers = "^3.2"
django-environ = "^0.4.5"
drf-nested-routers = "^0.91"
PyMySQL = "^1.0.2"
mysqlclient = "^2.1.0"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.1.0"
algoliasearch = "^2.6.1"

[tool.poetry.dev-dependencies]
pip = "^20.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
